--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -52,6 +52,10 @@
   <li><b><a href="http://gcc.gnu.org/ml/gcc-testresults/">
   gcc-testresults</a></b> is a moderate volume list where test results for
   the gcc compilers are posted.
+
+  <li><b><a href="http://gcc.gnu.org/ml/gcc-regression/">
+  gcc-regression</a></b> is a read only moderate volume list where regression
+  results for the gcc compilers are posted.
 </ul>
 
 <p>To post a message, just send mail to <i>listname</i><tt>@gcc.gnu.org</tt>.
