--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -35,8 +35,16 @@
   <li><b><a href="http://gcc.gnu.org/ml/gcc-patches/">gcc-patches</a></b>
   is a relatively high volume list for patch submissions and discussion of
   particular patches.  All patch submissions and all discussion for a
-  particular patch should be sent to <b>gcc-patches</b>.
+  particular patch should be sent to this list.
 
+  <li><b><a href="http://gcc.gnu.org/ml/gcc-testresults/">
+  gcc-testresults</a></b> is a moderate volume list where test results for
+  the gcc compilers are posted.
+</ul>
+
+<p>Read only lists:</p>
+
+<ul>
   <li><b><a href="http://gcc.gnu.org/ml/gcc-prs/">gcc-prs</a></b>
   is a read-only, relatively high volume list which tracks problem reports
   as they are entered into our GNATS database.
@@ -49,12 +57,8 @@
   is a read-only, relatively low volume list which tracks checkins to
   the gcc webpages CVS repository.
 
-  <li><b><a href="http://gcc.gnu.org/ml/gcc-testresults/">
-  gcc-testresults</a></b> is a moderate volume list where test results for
-  the gcc compilers are posted.
-
   <li><b><a href="http://gcc.gnu.org/ml/gcc-regression/">
-  gcc-regression</a></b> is a read only moderate volume list where regression
+  gcc-regression</a></b> is a read-only moderate volume list where regression
   results for the gcc compilers are posted.
 </ul>
 
@@ -103,10 +107,11 @@ lists via this form:
    <option value="gcc-help">gcc-help
    <option value="gcc-bugs">gcc-bugs
    <option value="gcc-patches">gcc-patches
+   <option value="gcc-testresults">gcc-testresults
    <option value="gcc-prs">gcc-prs
    <option value="gcc-cvs">gcc-cvs
    <option value="gcc-cvs-wwwdocs">gcc-cvs-wwwdocs
-   <option value="gcc-testresults">gcc-testresults
+   <option value="gcc-regression">gcc-regression
   </select>
  <br>
   Your e-mail address:
