* index.html: Mention java.sql, java.awt.event.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -77,6 +77,21 @@ includes the interpreter.
 </td></tr>
 
 <tr><td valign="top">
+<b>April 10, 2000</b>
+</td><td>
+Warren Levy checked in a JDK 1.1 compatiable version of
+<a href="http://www.classpath.org">Classpath's</a> <tt>java.sql</tt>.
+Once we have merged the necessary JDK 1.2 support, we'll update
+this to directly track Classpath.
+</td></tr>
+
+<tr><td valign="top">
+<b>April 8, 2000</b>
+</td><td>
+Tom Tromey wrote most of <tt>java.awt.event</tt>.
+</td></tr>
+
+<tr><td valign="top">
 <b>March 15, 2000</b>
 </td><td>
 Jon Beniston contributed the beginnings of a Windows port of libgcj.
@@ -193,7 +208,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.32 2000/03/15 22:07:33 tromey Exp $
+$Id: index.html,v 1.33 2000/03/26 22:31:51 tromey Exp $
 </small>
 </address>
 
