* download.html: Mention RPM.
	* index.html: Fixed ordering of items in news.  Added note about
	AG's RPMs.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -107,6 +107,11 @@ GCC snapshots are made about once a week.  They are available from
 Libgcj snapshots are made nightly, and are available from
 <a href="ftp://sourceware.cygnus.com/pub/java/snapshot">ftp://sourceware.cygnus.com/pub/java/snapshot</a>.
 
+<h3>RPM</h3>
+RPMs are made available occasionally.  The are available from
+<a href="ftp://sourceware.cygnus.com/pub/java/rpm/">ftp://sourceware.cygnus.com/pub/java/rpm/</a>.
+<p>
+
 <h3>cvs</h3> 
 The easiest way to get libgcj is to check it out from the
 anonymous cvs repository.  Here's how:
@@ -204,7 +209,7 @@ for more details on downloading and using this release.</td>
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: download.html,v 1.5 2000/03/13 17:23:06 tromey Exp $
+$Id: download.html,v 1.6 2000/03/26 22:31:51 tromey Exp $
 </small>
 </address>
 
