--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -70,13 +70,6 @@ i
 
 <table>
 <tr><td valign="top">
-<b>March 26, 2000</b>
-</td><td>
-Hans Boehm contributed a port of libgcj to the IA-64.  This port
-includes the interpreter.
-</td></tr>
-
-<tr><td valign="top">
 <b>April 10, 2000</b>
 </td><td>
 Warren Levy checked in a JDK 1.1 compatiable version of
@@ -86,9 +79,25 @@ this to directly track Classpath.
 </td></tr>
 
 <tr><td valign="top">
+<b>April 3, 2000</b>
+</td><td>
+Anthony Green made
+<a href="ftp://sourceware.cygnus.com/pub/java/rpm/">RPMs</a>
+of gcj and libgcj.  See his original
+<a href="http://sourceware.cygnus.com/ml/java-discuss/2000-04/msg00022.html">message</a> for some caveats.
+</td></tr>
+
+<tr><td valign="top">
 <b>April 8, 2000</b>
 </td><td>
 Tom Tromey wrote most of <tt>java.awt.event</tt>.
+</td></tr>
+
+<tr><td valign="top">
+<b>March 26, 2000</b>
+</td><td>
+Hans Boehm contributed a port of libgcj to the IA-64.  This port
+includes the interpreter.
 </td></tr>
 
 <tr><td valign="top">
@@ -208,7 +217,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.33 2000/03/26 22:31:51 tromey Exp $
+$Id: index.html,v 1.34 2000/04/11 17:45:27 tromey Exp $
 </small>
 </address>
 
