* index.html: Fix typo and add a bit of formating.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -72,7 +72,7 @@ i
 <tr><td valign="top">
 <b>April 10, 2000</b>
 </td><td>
-Warren Levy checked in a JDK 1.1 compatiable version of
+Warren Levy checked in a JDK 1.1 compatible version of
 <a href="http://www.classpath.org">Classpath's</a> <tt>java.sql</tt>.
 Once we have merged the necessary JDK 1.2 support, we'll update
 this to directly track Classpath.
@@ -116,10 +116,10 @@ support for most JDK 1.1 language features, such as inner classes.
 <tr><td valign="top">
 <b>March 9, 2000</b>
 </td><td>
-Warren Levy checked in the basics of the java.security.* packages that
-he and Tom Tromey have been putting together.  It is just the basics of
-java.security and some of it is indeed stubbed.  It has been tried with 
-the 20000120 snapshot of 
+Warren Levy checked in the basics of the <tt>java.security.*</tt> packages
+that he and Tom Tromey have been putting together.  It is just the basics
+of <tt>java.security</tt> and some of it is indeed stubbed.  It has been
+tried with the 20000120 snapshot of 
 <a href="http://www.cryptix.org/products/jce">Cryptix JCE</a>
 so it is usable.
 
@@ -217,7 +217,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.35 2000/04/11 19:48:25 tromey Exp $
+$Id: index.html,v 1.36 2000/04/11 19:54:40 tromey Exp $
 </small>
 </address>
 
