--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -25,6 +25,9 @@ Successful
 <p><b>alphaev5-dec-osf4.0d</b><br>
 Successful
 
+<p><b>alphaev5-dec-osf4.0d</b><br>
+Successful
+
 <p><b>alphaev5-dec-osf4.0f</b><br>
 Successful
 
