Mention Red Hat.  Add projects page.

--- a/htdocs/java/contribute.html
+++ b/htdocs/java/contribute.html
@@ -35,7 +35,7 @@
 
    <li>The above form is for a one-time change submission; you can
    fill out a different assignment to give all future copyrights
-   (for a particular program) to Cygnus.
+   (for a particular program) to Red Hat.
    If you think you're going to be doing continuing work on libgcj
    it will be easiest if you can fill out this form.
    We don't currently have this form available on-line; please send
@@ -55,7 +55,7 @@
        Note that, unlike some other projects, we do require ChangeLogs
        also for documentation (i.e., .texi files).
   <li> The patch itself.  If you are accessing the
-       CVS repository at Cygnus, use &quot;cvs update; cvs diff -c3p&quot;;
+       CVS repository at Red Hat, use &quot;cvs update; cvs diff -c3p&quot;;
        else, use &quot;diff -c3p OLD NEW&quot; or &quot;diff -up OLD NEW&quot;.
        If your version of diff does not support these options, then get the
        latest version of GNU diff.
