--- a/htdocs/java/faq-portugese.html
+++ b/htdocs/java/faq-portugese.html
@@ -36,7 +36,7 @@
 <br><a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a>
 <br><a href="http://sourceware.cygnus.com">Sourceware</a>
 <br><a href="http://www.gnu.org">The GNU Project</a>
-<br><a href="http://www.cygnus.com">Cygnus Solutions</a></td>
+<br><a href="http://www.redhat.com">Red Hat</a></td>
 </tr>
 </table>
 </td>
@@ -223,7 +223,7 @@ do Gnats.
 Voc&ecirc; pode enviar reparos simples como remendos. Por favor, siga as
 seguintes <a href="http://gcc.gnu.org/contribute.html">Diretrizes GCC
 para submiss&atilde;o de remendos</a>. "For more complex changes, you must
-sign copyright over to Cygnus." Veja a&nbsp; p&aacute;gina de <a href="http://sourceware.cygnus.com/java/contrib.html">contribui&ccedil;&otilde;es</a>
+sign copyright over to the Free Software Foundation." Veja a&nbsp; p&aacute;gina de <a href="http://sourceware.cygnus.com/java/contrib.html">contribui&ccedil;&otilde;es</a>
 para detalhes.
 <hr></dt>
 </dl>
