--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -31,7 +31,7 @@
                   <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
                   <a href="http://sourceware.cygnus.com">Sourceware</a><br>
                   <a href="http://www.gnu.org">The GNU Project</a><br>
-                  <a href="http://www.cygnus.com">Cygnus Solutions</a><br>
+                  <a href="http://www.redhat.com">Red Hat</a><br>
                 </td>
               </tr>
             </table>
@@ -147,7 +147,7 @@
         <p> 
         <dd>You can send simple bug fixes in as patches. Please follow the <a href="http://gcc.gnu.org/contribute.html">GCC 
           guidelines for submitting patches</a>. For more complex changes, you 
-          must sign copyright over to Cygnus. See the <a href="contrib.html">contribution</a> 
+          must sign copyright over to the Free Software Foundation. See the <a href="contrib.html">contribution</a> 
           page for details.</dd>
         <p></p>
         <dt> 
@@ -751,7 +751,7 @@ $ ../configure [...]
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.20 2000/03/27 20:23:21 tromey Exp $ </small></address>
+<small> $Id: faq.html,v 1.21 2000/03/29 21:02:15 tromey Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
