--- a/htdocs/java/gcj2.html
+++ b/htdocs/java/gcj2.html
@@ -95,8 +95,8 @@ easy to try a small Java program of your own:
 <blockquote>
   <a name="javatm">Java</a> and all Java-based marks are trademarks or
   registered trademarks of Sun Microsystems, Inc. in the United States
-  and other countries. The Free Software Foundation and Cygnus Solutions
-  are independent of Sun Microsystems, Inc.
+  and other countries. The Free Software Foundation, Cygnus Solutions, 
+  and Red Hat are independent of Sun Microsystems, Inc.
 </blockquote>
 
 <!--#include virtual="/include/footer-subpages.html"-->
