--- a/htdocs/java/tm.html
+++ b/htdocs/java/tm.html
@@ -27,7 +27,7 @@
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
 <a href="http://sourceware.cygnus.com">Sourceware</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
-<a href="http://www.cygnus.com">Cygnus Solutions</a><br>
+<a href="http://www.redhat.com">Red Hat</a><br>
 </td></tr></table>
 </td></tr></table>
 
@@ -43,8 +43,8 @@ i
 
 Java and all Java-based marks are trademarks or registered trademarks
 of Sun Microsystems, Inc. in the United States and other countries.
-The Free Software Foundation and Cygnus Solutions are independent of
-Sun Microsystems, Inc.
+The Free Software Foundation, Cygnus Solutions and Red Hat are
+independent of Sun Microsystems, Inc.
 
 </td></tr>
 </table>
@@ -55,7 +55,7 @@ Sun Microsystems, Inc.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: tm.html,v 1.1 1999/09/07 00:34:01 green Exp $
+$Id: tm.html,v 1.2 2000/03/13 17:23:06 tromey Exp $
 </small>
 </address>
 
