--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -27,7 +27,7 @@
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
 <a href="http://sourceware.cygnus.com">Sourceware</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
-<a href="http://www.cygnus.com">Cygnus Solutions</a><br>
+<a href="http://www.redhat.com">Red Hat</a><br>
 </td></tr></table>
 </td></tr></table>
 
@@ -47,12 +47,25 @@ i
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
- Coding Standards
+ Project Ideas
  </th>
 </tr>
 </table>
 <br>
 
+<p>We've started maintaining a list of <a href="projects.html">useful
+projects</a>.
+
+<p>
+
+<table border="0" cellpadding="4" width="95%">
+<tr bgcolor="#b0d0ff">
+ <th align="left">
+ Coding Standards
+ </th>
+</tr>
+</table>
+<br>
 
   <p>All contributions must conform to the <a
   href="http://www.gnu.ai.mit.edu/prep/standards_toc.html">GNU Coding
@@ -109,7 +122,7 @@ i
        Note that, unlike some other projects, we do require ChangeLogs
        also for documentation (i.e., .texi files).
   <li> The patch itself.  If you are accessing the
-       CVS repository at Cygnus, use &quot;cvs update; cvs diff -c3p&quot;;
+       CVS repository at Red Hat, use &quot;cvs update; cvs diff -c3p&quot;;
        else, use &quot;diff -c3p OLD NEW&quot; or &quot;diff -up OLD NEW&quot;.
        If your version of diff does not support these options, then get the
        latest version of GNU diff.
@@ -160,7 +173,7 @@ i
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: contrib.html,v 1.1 1999/09/07 00:34:01 green Exp $
+$Id: contrib.html,v 1.2 2000/03/13 17:23:06 tromey Exp $
 </small>
 </address>
 
