--- a/htdocs/java/docs.html
+++ b/htdocs/java/docs.html
@@ -27,7 +27,7 @@
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
 <a href="http://sourceware.cygnus.com">Sourceware</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
-<a href="http://www.cygnus.com">Cygnus Solutions</a><br>
+<a href="http://www.redhat.com">Red Hat</a><br>
 </td></tr></table>
 </td></tr></table>
 
@@ -164,7 +164,7 @@ conferences and magazines.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: docs.html,v 1.3 2000/03/03 04:56:29 bryce Exp $
+$Id: docs.html,v 1.4 2000/03/13 17:23:06 tromey Exp $
 </small>
 </address>
 
