--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -27,7 +27,7 @@
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
 <a href="http://sourceware.cygnus.com">Sourceware</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
-<a href="http://www.cygnus.com">Cygnus Solutions</a><br>
+<a href="http://www.redhat.com">Red Hat</a><br>
 </td></tr></table>
 </td></tr></table>
 
@@ -209,7 +209,7 @@ for more details on downloading and using this release.</td>
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: download.html,v 1.6 2000/03/26 22:31:51 tromey Exp $
+$Id: download.html,v 1.7 2000/04/11 19:48:25 tromey Exp $
 </small>
 </address>
 
