--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -27,7 +27,7 @@
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
 <a href="http://sourceware.cygnus.com">Sourceware</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
-<a href="http://www.cygnus.com">Cygnus Solutions</a><br>
+<a href="http://www.redhat.com">Red Hat</a><br>
 </td></tr></table>
 <br><br><br>
 <table border=0><tr><td width="10"></td><td>
@@ -217,7 +217,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.36 2000/04/11 19:54:40 tromey Exp $
+$Id: index.html,v 1.37 2000/04/12 00:45:57 warrenl Exp $
 </small>
 </address>
 
