--- a/htdocs/java/support.html
+++ b/htdocs/java/support.html
@@ -27,7 +27,7 @@
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
 <a href="http://sourceware.cygnus.com">Sourceware</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
-<a href="http://www.cygnus.com">Cygnus Solutions</a><br>
+<a href="http://www.redhat.com">Red Hat</a><br>
 </td></tr></table>
 </td></tr></table>
 
@@ -53,7 +53,7 @@ i
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: support.html,v 1.1 1999/09/07 00:34:01 green Exp $
+$Id: support.html,v 1.2 2000/03/13 17:23:06 tromey Exp $
 </small>
 </address>
 
