--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -27,7 +27,7 @@
 <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
 <a href="http://sourceware.cygnus.com">Sourceware</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
-<a href="http://www.cygnus.com">Cygnus Solutions</a><br>
+<a href="http://www.redhat.com">Red Hat</a><br>
 </td></tr></table>
 </td></tr></table>
 
@@ -146,7 +146,7 @@ Thank you all!
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: thanks.html,v 1.7 2000/02/29 17:13:04 tromey Exp $
+$Id: thanks.html,v 1.8 2000/03/13 17:23:06 tromey Exp $
 </small>
 </address>
 
