--- a/htdocs/java/projects.html
+++ b/htdocs/java/projects.html
@@ -2,7 +2,6 @@
 <head>
 <title>The GCJ Projects List</title>
 </head>
-<!--#include virtual="/include/header-subpages.html"-->
 <body bgcolor="#FFFFFF">
 <table border=0>
   <tr>
@@ -149,7 +148,7 @@ incredibly useful.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.37 2000/04/12 00:45:57 warrenl Exp $
+$Id: projects.html,v 1.1 2000/04/23 05:00:50 green Exp $
 </small>
 </address>
 
