--- a/htdocs/java/projects.html
+++ b/htdocs/java/projects.html
@@ -139,7 +139,6 @@ GCJ</a>.  Building some infrastructure around these would be
 incredibly useful.
 </td>
 </tr>
-</table>
 
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
@@ -168,7 +167,6 @@ we want:
 
 </td>
 </tr>
-</table>
 
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
@@ -203,7 +201,6 @@ Compiler improvements
 	  </ul>
 </td>
 </tr>
-</table>
 
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
@@ -219,15 +216,15 @@ Runtime improvements
 	  </ul>
 </td>
 </tr>
-</table>
 
+</table>
 <hr>
 
 <address>
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: projects.html,v 1.2 2000/04/23 05:02:31 green Exp $
+$Id: projects.html,v 1.3 2000/04/23 05:52:56 tromey Exp $
 </small>
 </address>
 
