--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -70,6 +70,12 @@ i
 
 <table>
 <tr><td valign="top">
+<b>April 22, 2000</b>
+</td><td>
+The new <a href="projects.html">GCJ Projects</a> page is brought online.
+</td></tr>
+
+<tr><td valign="top">
 <b>April 10, 2000</b>
 </td><td>
 Warren Levy checked in a JDK 1.1 compatible version of
@@ -217,7 +223,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.37 2000/04/12 00:45:57 warrenl Exp $
+$Id: index.html,v 1.38 2000/04/23 05:00:31 green Exp $
 </small>
 </address>
 
