Some further (nearly final) steps in the egcs->gcc conversion.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -50,7 +50,7 @@ your remote machine.  Set CVS_RSH in your environment to "ssh".  Then issue
 the command
 
 <blockquote><code>
-cvs -z 9 -d :ext:username@gcc.gnu.org:/cvs/gcc co egcs
+cvs -z 9 -d :ext:username@gcc.gnu.org:/cvs/gcc co gcc
 </code></blockquote>
 
 where <code>username</code> is your user name at gcc.gnu.org.
@@ -190,7 +190,7 @@ Sun Feb  8 08:02:13 1998  John Carr  &lt;jfc@mit.edu>
 
 <blockquote>
 <pre>
-[/law/egcs/egcs] cvs update
+[/law/gcc] cvs update
 ? libobjc
 ? gcc/.ada
 ? gcc/jump.c.SAVE
@@ -216,7 +216,7 @@ local copy was out of date relative to the master sources.
 
 <blockquote>
 <pre>
-[/law/egcs/egcs/gcc] patch &lt; ~/Mail/gcc/pendingpatches/42 
+[/law/gcc/gcc] patch &lt; ~/Mail/gcc/pendingpatches/42 
 Hmm...  Looks like a new-style context diff to me...
 The text leading up to this was:
 <i>[ uninteresting text deleted ]</i>
@@ -253,7 +253,7 @@ patches against <tt>ChangeLog</tt>s rarely apply correctly.
 
 <blockquote>
 <pre>
-[/law/egcs/egcs/gcc] vi ChangeLog
+[/law/gcc/gcc] vi ChangeLog
 </pre>
 </blockquote>
 
@@ -265,7 +265,7 @@ the output.
 
 <blockquote>
 <pre>
-[/law/egcs/egcs/gcc] cvs diff -c3p bitmap.c calls.c genattrtab.c > /tmp/FOO
+[/law/gcc/gcc] cvs diff -c3p bitmap.c calls.c genattrtab.c > /tmp/FOO
 </pre>
 </blockquote>
 
@@ -279,7 +279,7 @@ in this particular case all three needed their copyrights updated.
 
 <blockquote>
 <pre>
-[/law/egcs/egcs/gcc] vi bitmap.c calls.c genattrtab.c
+[/law/gcc/gcc] vi bitmap.c calls.c genattrtab.c
 </pre>
 </blockquote>
 
@@ -287,7 +287,7 @@ in this particular case all three needed their copyrights updated.
 
 <blockquote>
 <pre>
-[/law/egcs/egcs/gcc] cvs commit ChangeLog bitmap.c calls.c genattrtab.c
+[/law/gcc/gcc] cvs commit ChangeLog bitmap.c calls.c genattrtab.c
 </pre>
 </blockquote>
 
@@ -322,22 +322,22 @@ checkin process....
 <blockquote>
 <pre>
 Checking in ChangeLog;
-/cvs/egcs/egcs/./gcc/ChangeLog,v  &lt;--  ChangeLog
+/cvs/gcc/./gcc/ChangeLog,v  &lt;--  ChangeLog
 new revision: 1.746; previous revision: 1.745
 done
 Checking in bitmap.c;
-/cvs/egcs/egcs/./gcc/bitmap.c,v  &lt;--  bitmap.c
+/cvs/gcc/./gcc/bitmap.c,v  &lt;--  bitmap.c
 new revision: 1.6; previous revision: 1.5
 done
 Checking in calls.c;
-/cvs/egcs/egcs/./gcc/calls.c,v  &lt;--  calls.c
+/cvs/gcc/./gcc/calls.c,v  &lt;--  calls.c
 new revision: 1.12; previous revision: 1.11
 done
 Checking in genattrtab.c;
-/cvs/egcs/egcs/./gcc/genattrtab.c,v  &lt;--  genattrtab.c
+/cvs/gcc/./gcc/genattrtab.c,v  &lt;--  genattrtab.c
 new revision: 1.15; previous revision: 1.14
 done
-[/law/egcs/egcs/gcc] 
+[/law/gcc/gcc] 
 </pre>
 </blockquote>
 
