--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -43,7 +43,7 @@ Issue the command <code>cvs login</code>.  You will be prompted for
 a password; reply with <code>anoncvs</code>.
 
 <p>Issue the command 
-<blockquote><code>cvs -z 9 co egcs</code></blockquote>
+<blockquote><code>cvs -z 9 co gcc</code></blockquote>
 to check out the compiler sources, respectively
 <blockquote><code>cvs -z 9 co wwwdocs</code></blockquote>
 to check out our web pages.
@@ -97,15 +97,15 @@ is: Autoconf, Bison, Xgettext, Automake, and Gperf.
 <p>The current version of Gperf (v2.7) does not support the -F
 flag, which is used to build GCC.  A patch to change Gperf to 
 support the -F flag is available at 
-<a href="ftp://gcc.gnu.org/pub/egcs/infrastructure/">
-ftp://gcc.gnu.org/pub/egcs/infrastructure/</a>
+<a href="ftp://gcc.gnu.org/pub/gcc/infrastructure/">
+ftp://gcc.gnu.org/pub/gcc/infrastructure/</a>
 
 <h3>CVS tags and checkouts</h3>
 
 <p> You can check out the latest version of the GCC 2.95 release
 branch with the following command:
 
-<blockquote><code>cvs -z 9 co -rgcc-2_95-branch egcs</code></blockquote>
+<blockquote><code>cvs -z 9 co -rgcc-2_95-branch gcc</code></blockquote>
 
 <p>By changing the <code>-r</code> argument above you can check out
 particular releases or snapshots or the latest snapshot.  Other tags/branches
