Some further egcs -> GCC conversions.

--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -32,7 +32,7 @@
   <li>New Languages and Language specific improvements
   <ul>
     <li><a href="c++features.html">Many C++ improvements</a>.
-    <li><a href="http://egcs.cygnus.com/onlinedocs/g77_news.html">Many Fortran improvements</a>.
+    <li><a href="http://gcc.gnu.org/onlinedocs/g77_news.html">Many Fortran improvements</a>.
     <li><a href="http://sourceware.cygnus.com/java/gcj-announce.txt">Java</a>
     front-end has been integrated.  A
     <a href="../javaannounce.html">runtime library</a>
