--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -138,7 +138,7 @@ GCC.  A partial list of supported <tt>options</tt>:
   <tt>${libsubdir}/include/g++</tt> unless you overruled it by using
   <tt>--with-gxx-include-dir=</tt><i>dirname</i>.
   Using this option is particularly useful if you intend to use several
-  versions of egcs/gcc in parallel. This is currently supported by <tt>libf2c</tt>
+  versions of GCC in parallel. This is currently supported by <tt>libf2c</tt>
   and <tt>libstdc++</tt>.
 
   <li> <tt>--enable-languages=</tt><i>lang1</i><tt>,</tt><i>lang2</i><tt>,...</tt>
@@ -150,8 +150,8 @@ GCC.  A partial list of supported <tt>options</tt>:
   </tt><br>
   Currently, you can use any of the following: <tt>CHILL</tt>, <tt>c++</tt>,
   <tt>f77</tt>, <tt>java</tt> and <tt>objc</tt>. Please note, that this switch
-  does not work with EGCS 1.1.2 or older versions of egcs.  It will be supported
-  in GCC 2.95 and newer version.<br>
+  does not work with EGCS 1.1.2 or older versions of egcs.  It is supported
+  in GCC 2.95 and newer versions.<br>
   If you do not pass this flag, all languages available in the <tt>gcc</tt> sub-tree
   will be configured.  Re-defining LANGUAGES when calling <tt>make bootstrap</tt>
   <b>*does not*</b> work anymore, as those language sub-directories might not have been
