--- a/htdocs/install/download.html
+++ b/htdocs/install/download.html
@@ -23,9 +23,9 @@ front-end as well as the language runtime (when appropriate).
 in the same directory.
 
 <p>XXX FSF mirror sites
-<p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
-FTP download from egcs.cygnus.com (USA California)</a>
-<p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/egcs/releases/index.html">
+<p><a href="ftp://gcc.gnu.org/pub/gcc/releases/index.html">
+FTP download from gcc.gnu.org (USA California)</a>
+<p><a href="ftp://go.cygnus.com/pub/sourceware.cygnus.com/pub/gcc/releases/index.html">
 FTP download from go.cygnus.com (USA California -- High speed link
 provided by Stanford)</a>
 <p>GCC releases are available on many <a href="../mirrors.html">FTP mirror sites</a>. If possible, please use one of these.
