--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -119,7 +119,8 @@ alphabetical order.
   other assorted hacking.
   <li> Jason Merrill for leading the g++ effort.
   <li> Jason Molenda for major help in the care and feeding of all the services
-       on the egcs machine -- mail, web services, ftp services, etc etc.
+       on the gcc.gnu.org (formerly egcs.cygnus.com) machine -- mail, web
+       services, ftp services, etc etc.
   <li> David Mosberger-Tang for various Alpha improvements.
   <li> Stephen Moshier for ISO C9X support.
   <li> Bill Moyer for his behind the scenes work on various issues.
