Announce d30v and ifcvt work.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -106,6 +106,18 @@ maintain and improve quality.
 <h2>News/Announcements</h2>
 
 <dl>
+<dt><b>April 30, 2000</b></dt>
+<dd>
+Michael Meissner of Cygnus, a Red Hat company, has contributed a 
+port for the Mitsubishi D30V processor.
+<p>
+Michael Meissner and Richard Henderson of Cygnus, a Red Hat company,
+have contributed a new if-conversion pass.  The code runs faster and
+identifies more optimization opportunities than the old code.  In
+addition, it also has support for conditional (predicated) execution,
+such as is found in the Intel IA-64 architecture, the ARM processors,
+and numerous embedded LIW and DSP parts.
+</dd>
 
 <dt><b>March 22, 2000</b></dt>
 <dd>
