--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -205,6 +205,9 @@ Successful
 <p><b>sparc-sun-solaris2.7</b><br>
 Successful
 
+<p><b>sparc-sun-solaris2.8</b><br>
+Successful
+
 <p><b>sparc-sun-sunos4.1.3</b><br>
 Successful
 
