--- a/htdocs/gnats.html
+++ b/htdocs/gnats.html
@@ -10,7 +10,7 @@
 <p><a href="http://sourceware.cygnus.com/gnats/">GNATS</a> is the GNU
 bug tracking system, and it is now used to track GCC bug reports, as
 well. Before submitting a bug report, please read the <a
-href="bugs.html">instructions</a>. You can either submit an
+href="bugs.html">general instructions</a>. You can either submit an
 unformatted report to the gcc-bugs mailing list, or use the formatted
 style of GNATS. The advantage of using GNATS is that you can always
 check the status of your bug reports.</p>
