Add announcement of merged Arm/Thumb backend

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -106,6 +106,17 @@ maintain and improve quality.
 <h2>News/Announcements</h2>
 
 <dl>
+<dt><b>May 1, 2000</b></dt>
+<dd>
+Richard Earnshaw of ARM Ltd, and Nick Clifton of Cygnus, a Red Hat
+company, have contributed a new backend for the Arm and Thumb
+processors. 
+<p>
+The new backend combines code generation for the Arm, the Thumb and
+the StrongArm into one compiler, with the target processor and
+instruction sets being selectable via command line switches.
+</dd>
+
 <dt><b>April 30, 2000</b></dt>
 <dd>
 Michael Meissner of Cygnus, a Red Hat company, has contributed a 
