--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -119,8 +119,8 @@ instruction sets being selectable via command line switches.
 
 <dt><b>April 30, 2000</b></dt>
 <dd>
-Michael Meissner and Nick Clifton of Cygnus, a Red Hat company, has contributed
-a port for the Mitsubishi D30V processor.
+Michael Meissner and Nick Clifton of Cygnus, a Red Hat company, have
+contributed a port for the Mitsubishi D30V processor.
 <p>
 Michael Meissner and Richard Henderson of Cygnus, a Red Hat company,
 have contributed a new if-conversion pass.  The code runs faster and
