* index.html: Mention JNI stubs.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -76,6 +76,13 @@ The new <a href="projects.html">GCJ Projects</a> page is brought online.
 </td></tr>
 
 <tr><td valign="top">
+<b>May 2, 2000</b>
+</td><td>
+Tom Tromey checked in the JNI stubs patch for gcj.  This patch makes
+it possible to use compiled Java code where the native methods are
+implemented using JNI.
+</td></tr>
+
 <b>April 10, 2000</b>
 </td><td>
 Warren Levy checked in a JDK 1.1 compatible version of
@@ -223,7 +230,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.38 2000/04/23 05:00:31 green Exp $
+$Id: index.html,v 1.39 2000/04/28 04:15:05 green Exp $
 </small>
 </address>
 
