--- a/htdocs/java/projects.html
+++ b/htdocs/java/projects.html
@@ -290,6 +290,14 @@ Runtime improvements
 	  <ul>
 	    <li>Write a program to convert existing locale data into a
 	    format we can use.
+
+            <li>It would be nice to have a way to compile a property
+            file into something that could be linked into the
+            application.  On Windows, it might make sense to do this
+            using the standard resource mechanism.  This has been
+            <a
+            href="http://sourceware.cygnus.com/ml/java-discuss/1999-q3/msg00318.html">discussed</a>
+            on the mailing list a bit.
 	  </ul>
 <p>
 
@@ -302,7 +310,7 @@ Runtime improvements
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: projects.html,v 1.8 2000/04/28 04:15:05 green Exp $
+$Id: projects.html,v 1.9 2000/04/29 01:45:35 tromey Exp $
 </small>
 </address>
 
