--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -69,11 +69,6 @@ i
 <br>
 
 <table>
-<tr><td valign="top">
-<b>April 22, 2000</b>
-</td><td>
-The new <a href="projects.html">GCJ Projects</a> page is brought online.
-</td></tr>
 
 <tr><td valign="top">
 <b>May 2, 2000</b>
@@ -83,6 +78,14 @@ it possible to use compiled Java code where the native methods are
 implemented using JNI.
 </td></tr>
 
+
+<tr><td valign="top">
+<b>April 22, 2000</b>
+</td><td>
+The new <a href="projects.html">GCJ Projects</a> page is brought online.
+</td></tr>
+
+<tr><td valign="top">
 <b>April 10, 2000</b>
 </td><td>
 Warren Levy checked in a JDK 1.1 compatible version of
@@ -230,7 +233,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.39 2000/04/28 04:15:05 green Exp $
+$Id: index.html,v 1.40 2000/05/02 20:33:08 tromey Exp $
 </small>
 </address>
 
