Update list of secondary platforms

--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -85,8 +85,8 @@ systems and the most popular microprocessors.  Of course, where
 possible, the release will support other targets as well.</p>
 
 <table align="center">
-<caption>Primary Supported Platforms</caption>
-<tr><th>Chip<th>OS<th>Triplet
+<caption>Primary Evaluation Platforms</caption>
+<tr><th>Chip     <th>OS              <th>Triplet
 <tr><td>Alpha    <td>RedHat Linux 6.2<td>
 <tr><td>HPPA     <td>HPUX            <td>
 <tr><td>Intel x86<td>Debian 2.1      <td>i686-pc-linux-gnu
@@ -96,16 +96,36 @@ possible, the release will support other targets as well.</p>
 <tr><td>SPARC    <td>Solaris 2.7     <td>sparc-sun-solaris2.7
 </table>
 
-<p>GCC's performance on the he following platforms will not be
-required to meet all the criteria mentioned in this document before
-GCC 3.0 ships, but the performance on these systems will be
-considerable interest, and it is likely that serious problems on these
-platforms will delay the release.</p>
+<p>GCC's performance on the following platforms will not be required
+to meet all the criteria mentioned in this document before GCC 3.0
+ships, but the performance on these systems will be considerable
+interest, and it is likely that serious problems on these platforms
+will delay the release.</p>
+
+<p>Volunteers will be required, both to test and to fix bugs, for all
+secondary platforms.  (These volunteers may be the same person, but
+volunteers show be careful not to sign up for more work than they can
+actually do.)  If volunteers cannot be found for these platforms, then
+the secondary platforms will be dropped from this list.</p>
+
+<p>The bug-fixing volunteer will commit to ensuring that GCC 3.0 will
+at least bootstrap itself on each of these secondary platforms.  That
+committment doesn't necessarily mean fixing bugs personally; for
+example, if you are a manager for a company with GCC expertise you
+could be the volunteer if you'll commit to donating your employee's
+efforst as necessary.  The release manager, and the GCC development
+team, will make reasonable efforts to assist these volunteers by
+answering questions and reviewing patches as time permits.</p>
 
 <table align="center">
-<caption>Secondary Supported Platforms</caption>
-<tr><th>Chip<th>OS<th>Triplet
+<caption>Secondary Evaluation Platforms</caption>
+<tr><th>Chip     <th>OS              <th>Triplet
 <tr><td>Intel x86<td>FreeBSD         <td>
+<tr><td>PowerPC  <td>Linux           <td>
+<tr><td>SPARC    <td>SunOS 4.1.4     <td>sparc-sun-sunos4.1.4
+<tr><td>SPARC    <td>RedHat Linux 6.2<td>
+<tr><td>ARM      <td>Linux           <td>
+<tr><td>Intel x86<td>Cygwin          <td>
 </table>
 
 <h2>Language Support</h2>
