Add announcement for basic block reordering.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -106,6 +106,17 @@ maintain and improve quality.
 <h2>News/Announcements</h2>
 
 <dl>
+<dt><b>May 2, 2000</b></dt>
+<dd>
+Stan Cox and Jason Eckhardt of Cygnus, a Red Hat company, have
+contributed a basic block reordering pass. The optimization can
+reposition basic blocks from across the entire function in an attempt
+to reduce branch penalties and enhance instruction cache efficiency.
+<p>
+Our thanks go to Michael Hayes, Jan Hubicka, and Graham Stott who
+noticed or fixed defects or made other useful suggestions.
+</dd>
+
 <dt><b>May 1, 2000</b></dt>
 <dd>
 Richard Earnshaw of ARM Ltd, and Nick Clifton of Cygnus, a Red Hat
