Fix two typos. Add a version number and triplet for FreeBSD.

--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -98,13 +98,13 @@ possible, the release will support other targets as well.</p>
 
 <p>GCC's performance on the following platforms will not be required
 to meet all the criteria mentioned in this document before GCC 3.0
-ships, but the performance on these systems will be considerable
+ships, but the performance on these systems will be of considerable
 interest, and it is likely that serious problems on these platforms
 will delay the release.</p>
 
 <p>Volunteers will be required, both to test and to fix bugs, for all
 secondary platforms.  (These volunteers may be the same person, but
-volunteers show be careful not to sign up for more work than they can
+volunteers should be careful not to sign up for more work than they can
 actually do.)  If volunteers cannot be found for these platforms, then
 the secondary platforms will be dropped from this list.</p>
 
@@ -120,7 +120,7 @@ answering questions and reviewing patches as time permits.</p>
 <table align="center">
 <caption>Secondary Evaluation Platforms</caption>
 <tr><th>Chip     <th>OS              <th>Triplet
-<tr><td>Intel x86<td>FreeBSD         <td>
+<tr><td>Intel x86<td>FreeBSD 4.0     <td>i386-unknown-freebsdelf
 <tr><td>PowerPC  <td>Linux           <td>
 <tr><td>SPARC    <td>SunOS 4.1.4     <td>sparc-sun-sunos4.1.4
 <tr><td>SPARC    <td>RedHat Linux 6.2<td>
